# secret-santa-discord

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  secret-santa-discord.files  secret-santa-discord.includes
secret-santa/: CMakeLists.txt
secret-santa/include/secret-santa/: santa.h  santa_client.h
secret-santa/src/: main.cpp  santa.cpp  santa_client.cpp
